# masm64_simple_example

./: .gitignore  CMakeLists.txt  LICENSE  README.md  makeit.bat
src/: CMakeLists.txt  Makefile  simple.asm
src/simple_dialog/: CMakeLists.txt  Makefile  makeit.bat  simple.asm
src/simple_dialog/res/: dlgs.rc  manifest.xml  rsrc.rc
src/simple_exit/: CMakeLists.txt  Makefile  makeit.bat  simple.asm
